--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
             REQUEST_TYPE_ID=<< parameters.requestTypeID >>
 
             SERVICE_DESK_ENV=<< parameters.serviceDeskEnv >>
-            
+
             HEALTH_CHECK_URL=<< parameters.healthCheckUrl >>" > .env
 
       - run: sudo npm install -g firebase-tools
@@ -204,17 +204,17 @@ workflows:
             branches:
               only:
                 - development
-      # - deploy_hosting_test_harness:
-      #     firebaseProjectId: mdhs-csa-dev
-      #     googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
-      #     eventUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/eventRequest
-      #     textUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/textRequest
-      #     feedbackURL: https://us-central1-mdhs-csa-dev.cloudfunctions.net/storeFeedback
-      #     testHarnessHostedUrl: mdhs-csa-dev-test-harness
-      #     filters:
-      #       branches:
-      #         only:
-      #           - development
+      - deploy_hosting_test_harness:
+          firebaseProjectId: mdhs-csa-dev
+          googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
+          eventUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/eventRequest
+          textUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/textRequest
+          feedbackURL: https://us-central1-mdhs-csa-dev.cloudfunctions.net/storeFeedback
+          testHarnessHostedUrl: mdhs-csa-dev-test-harness
+          filters:
+            branches:
+              only:
+                - development
       - deploy_hosting_analytics:
           firebaseProjectId: mdhs-csa-dev
           firebaseApiKey: AIzaSyDGkhs6juNsvEBN6c1aNpbGIPcZhB2dImM # Not a secret
@@ -250,17 +250,17 @@ workflows:
             branches:
               only:
                 - isd
-      # - deploy_hosting_test_harness:
-      #     firebaseProjectId: mdhs-csa-isd-273818
-      #     googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
-      #     eventUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/eventRequest
-      #     textUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/textRequest
-      #     feedbackURL: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/storeFeedback
-      #     testHarnessHostedUrl: tbd
-      #     filters:
-      #       branches:
-      #         only:
-      #           - isd
+      - deploy_hosting_test_harness:
+          firebaseProjectId: mdhs-csa-isd-273818
+          googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
+          eventUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/eventRequest
+          textUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/textRequest
+          feedbackURL: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/storeFeedback
+          testHarnessHostedUrl: tbd
+          filters:
+            branches:
+              only:
+                - isd
       - deploy_hosting_analytics:
           firebaseProjectId: mdhs-csa-isd-273818
           firebaseApiKey: AIzaSyAZecCjFe--9pJh2hIo6FADebDBHg7RK6M # Not a secret
@@ -296,17 +296,17 @@ workflows:
             branches:
               only:
                 - stage
-      # - deploy_hosting_test_harness:
-      #     firebaseProjectId: mdhs-csa-stage
-      #     googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
-      #     eventUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/eventRequest
-      #     textUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/textRequest
-      #     feedbackURL: https://us-central1-mdhs-csa-stage.cloudfunctions.net/storeFeedback
-      #     testHarnessHostedUrl: tbd
-      #     filters:
-      #       branches:
-      #         only:
-      #           - stage
+      - deploy_hosting_test_harness:
+          firebaseProjectId: mdhs-csa-stage
+          googleMapsKey: AIzaSyCSpN9JJqwyhOXPJ9qtLsaN0DlkLcEpO2Y # Not a secret
+          eventUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/eventRequest
+          textUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/textRequest
+          feedbackURL: https://us-central1-mdhs-csa-stage.cloudfunctions.net/storeFeedback
+          testHarnessHostedUrl: tbd
+          filters:
+            branches:
+              only:
+                - stage
       - deploy_hosting_analytics:
           firebaseProjectId: mdhs-csa-stage
           firebaseApiKey: AIzaSyAXH0VmURgNJu21ueoep22rmgpe7dZozUU # Not a secret
