--- a/agent/intents/cse-apptsQA-office-hours.json
+++ b/agent/intents/cse-apptsQA-office-hours.json
@@ -8,63 +8,23 @@
   "responses": [
     {
       "resetContexts": false,
-      "action": "",
       "affectedContexts": [
         {
-          "name": "waiting-appts-not-contacted",
-          "lifespan": 2
-        },
-        {
           "name": "cse-subject-matter",
+          "parameters": {},
           "lifespan": 99
         }
       ],
       "parameters": [],
       "messages": [
         {
-          "type": "0",
-          "title": "",
-          "textToSpeech": "",
+          "type": 0,
           "lang": "en",
-          "speech": [
-            "You generally aren\u0027t required to schedule an appointment on your own.\u003cbr/\u003e\u003cbr/\u003eIf we require an appointment, you will receive a notice letter to appear at a District office."
-          ],
-          "condition": ""
-        },
-        {
-          "type": "0",
-          "title": "",
-          "textToSpeech": "",
-          "lang": "en",
-          "speech": [
-            "If you have urgent questions, you can contact support at \u003ca href\u003d\"tel:+18778824916\"\u003e1-877-882-4916\u003c/a\u003e.\u003cbr/\u003e\u003cbr/\u003eYou may visit any office between 8:00 am and 5:00 pm, Monday through Friday, excluding holidays, to obtain information about your case."
-          ],
-          "condition": ""
-        },
-        {
-          "type": "0",
-          "title": "",
-          "textToSpeech": "",
-          "lang": "en",
-          "speech": [
-            "Do you need help finding an office location?"
-          ],
-          "condition": ""
-        },
-        {
-          "type": "4",
-          "title": "",
-          "payload": {
-            "suggestions": [
-              "Yes",
-              "No"
-            ]
-          },
-          "textToSpeech": "",
-          "lang": "en",
-          "condition": ""
+          "condition": "",
+          "speech": []
         }
       ],
+      "defaultResponsePlatforms": {},
       "speech": []
     }
   ],
