--- a/agent/intents/cse-support-qa-who-can-apply.json
+++ b/agent/intents/cse-support-qa-who-can-apply.json
@@ -1,40 +1,54 @@
 {
-  "id": "ccccbca3-5b12-492c-bb5d-8e8c14e0e162",
-  "name": "cse-support-qa-who-can-apply",
-  "auto": true,
-  "contexts": [
-    "cse-subject-matter"
-  ],
-  "responses": [
-    {
-      "resetContexts": false,
-      "action": "",
-      "affectedContexts": [
+    "id": "ccccbca3-5b12-492c-bb5d-8e8c14e0e162",
+    "name": "cse-support-qa-who-can-apply",
+    "auto": true,
+    "contexts": [
+        "cse-subject-matter"
+    ],
+    "responses": [
         {
-          "name": "cse-subject-matter",
-          "lifespan": 99,
-          "parameters": {}
+            "resetContexts": false,
+            "action": "",
+            "affectedContexts": [
+                {
+                    "name": "cse-subject-matter",
+                    "lifespan": 99,
+                    "parameters": {}
+                }
+            ],
+            "parameters": [],
+            "messages": [
+                {
+                    "type": "0",
+                    "title": "",
+                    "textToSpeech": "",
+                    "lang": "en",
+                    "speech": [
+                        "Any legal custodians can apply for child support."
+                    ],
+                    "condition": ""
+                },
+                {
+                    "type": "4",
+                    "title": "",
+                    "payload": {
+                        "suggestions": [],
+                        "handleEndConversation": true
+                    },
+                    "textToSpeech": "",
+                    "lang": "en",
+                    "condition": ""
+                }
+            ],
+            "speech": []
         }
-      ],
-      "parameters": [],
-      "messages": [
-        {
-          "type": "0",
-          "title": "",
-          "textToSpeech": "",
-          "lang": "en",
-          "condition": ""
-        }
-      ],
-      "speech": []
-    }
-  ],
-  "priority": 500000,
-  "webhookUsed": true,
-  "webhookForSlotFilling": false,
-  "fallbackIntent": false,
-  "events": [],
-  "conditionalResponses": [],
-  "condition": "",
-  "conditionalFollowupEvents": []
+    ],
+    "priority": 500000,
+    "webhookUsed": true,
+    "webhookForSlotFilling": false,
+    "fallbackIntent": false,
+    "events": [],
+    "conditionalResponses": [],
+    "condition": "",
+    "conditionalFollowupEvents": []
 }
