--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
             REQUEST_TYPE_ID=<< parameters.requestTypeID >>
 
             SERVICE_DESK_ENV=<< parameters.serviceDeskEnv >>
-            
+
             HEALTH_CHECK_URL=<< parameters.healthCheckUrl >>" > .env
 
       - run: sudo npm install -g firebase-tools
@@ -103,19 +103,16 @@ jobs:
         type: string
     steps:
       - checkout
-      - run:
-          name: "Add npmrc to hosting folder"
-          command: cd hosting/testHarness && echo "${ALL_NPM_AUTH_TOKEN}" > .npmrc
       - restore_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
-      - run: cd hosting/testHarness && npm install
+      - run: cd webchat-core && npm install
       - save_cache:
           key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
-            - hosting/node_modules
+            - webchat-core/node_modules
       - run:
-          name: "Add env variables to hosting folder"
-          command: cd hosting/testHarness && echo
+          name: "Add env variables to webchat-core folder"
+          command: cd webchat-core && echo
             "REACT_APP_GOOGLE_MAPS_KEY=<< parameters.googleMapsKey >>
 
             REACT_APP_EVENT_URL=<< parameters.eventUrl >>
@@ -125,8 +122,8 @@ jobs:
             REACT_APP_FEEDBACK_URL=<< parameters.feedbackURL >>" > .env
 
       - run:
-          name: "Add env variables to hosting folder"
-          command: cd hosting/testHarness && npm run build
+          name: "Add env variables to webchat-core folder"
+          command: cd webchat-core && npm run build
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy --only hosting:testHarness --token $FIREBASE_DEPLOY_TOKEN -P << parameters.firebaseProjectId >>
 
@@ -150,8 +147,6 @@ jobs:
       firebaseAppId:
         type: string
       downloadExportUrl:
-        type: string
-      analyticsHostedUrl:
         type: string
     steps:
       - checkout
@@ -224,7 +219,6 @@ workflows:
           firebaseMessagingSenderId: 390034944383
           firebaseAppId: 1:390034944383:web:6cefab99af945d7876aa4a
           downloadExportUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/downloadExport
-          analyticsHostedUrl: mdhs-csa-dev-analytics
           filters:
             branches:
               only:
@@ -256,7 +250,6 @@ workflows:
           eventUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/eventRequest
           textUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/textRequest
           feedbackURL: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/storeFeedback
-          testHarnessHostedUrl: tbd
           filters:
             branches:
               only:
@@ -270,7 +263,6 @@ workflows:
           firebaseMessagingSenderId: 982471055822
           firebaseAppId: 1:982471055822:web:65ee3d09dd3e1e0822f39f
           downloadExportUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/downloadExport
-          analyticsHostedUrl: tbd
           filters:
             branches:
               only:
@@ -316,7 +308,6 @@ workflows:
           firebaseMessagingSenderId: 75224097502
           firebaseAppId: 1:75224097502:web:43ecc962b205e01b37584f
           downloadExportUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/downloadExport
-          analyticsHostedUrl: tbd
           filters:
             branches:
               only:
@@ -353,7 +344,6 @@ workflows:
           firebaseMessagingSenderId: 804026557045
           firebaseAppId: 1:804026557045:web:501111adde1bda8c87ce3c
           downloadExportUrl: https://us-central1-mdhs-csa.cloudfunctions.net/downloadExport
-          analyticsHostedUrl: tbd
           filters:
             branches:
               only:
