--- a/firebase.json
+++ b/firebase.json
@@ -11,7 +11,7 @@
     },
     {
       "target": "testHarness",
-      "public": "hosting/testHarness/build",
+      "public": "webchat-core/build",
       "ignore": [
         "firebase.json",
         "**/.*",
